-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.14.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/393c6362-298e-472f-be95-f23a1892e9df
test_fsx failed with the following error:
trevis-209vm6 crashed during sanity-dom test_fsx [14491.172043] LustreError: 813:0:(osc_cache.c:1113:osc_extent_make_ready()) ASSERTION( last_oap_count > 0 ) failed: [14491.173797] LustreError: 813:0:(osc_cache.c:1113:osc_extent_make_ready()) LBUG [14491.174924] Pid: 813, comm: ldlm_bl_06 3.10.0-1127.19.1.el7.x86_64 #1 SMP Tue Aug 25 17:23:54 UTC 2020 [14491.176409] Call Trace: [14491.176839] [<ffffffffc06e867c>] libcfs_call_trace+0x8c/0xc0 [libcfs] [14491.177945] [<ffffffffc06e899c>] lbug_with_loc+0x4c/0xa0 [libcfs] [14491.178941] [<ffffffffc0cdf284>] osc_extent_make_ready+0xb64/0xe50 [osc] [14491.180097] [<ffffffffc0ce228b>] osc_io_unplug0+0xeeb/0x1900 [osc] [14491.181117] [<ffffffffc0ce6930>] osc_cache_writeback_range+0x9a0/0xfd0 [osc] [14491.182254] [<ffffffffc0cd1925>] osc_lock_flush+0x195/0x290 [osc] [14491.183251] [<ffffffffc0cd1df8>] osc_ldlm_blocking_ast+0x2f8/0x3e0 [osc] [14491.184337] [<ffffffffc0ac713a>] ldlm_cancel_callback+0x8a/0x310 [ptlrpc] [14491.185607] [<ffffffffc0ad2dd1>] ldlm_cli_cancel_local+0xd1/0x420 [ptlrpc] [14491.186747] [<ffffffffc0ad8fec>] ldlm_cli_cancel+0x10c/0x550 [ptlrpc] [14491.187822] [<ffffffffc0cd1c7a>] osc_ldlm_blocking_ast+0x17a/0x3e0 [osc] [14491.189143] [<ffffffffc0add6e8>] ldlm_handle_bl_callback+0xc8/0x3e0 [ptlrpc] [14491.190361] [<ffffffffc0addf9f>] ldlm_bl_thread_main+0x59f/0xaa0 [ptlrpc]
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-dom test_fsx - trevis-209vm6 crashed during sanity-dom test_fsx
- is related to
-
LU-14286 fallocate() does not zero on-disk data
-
- Resolved
-
-
LU-14333 ASSERTION( oinfo->loi_lvb.lvb_size >= oinfo->loi_kms ) failed
-
- Resolved
-
-
LU-11463 DOM: osc_extent_make_ready()) ASSERTION( last_oap_count > 0 ) failed
-
- Resolved
-
-
LU-10407 osc_cache.c:1141:osc_extent_make_ready()) ASSERTION( last_oap_count > 0 ) failed:
-
- Resolved
-
- mentioned in
-
Page Loading...